Logic Grounder/src/edu/umn/grounder/parser/GrounderParser.java
// $ANTLR 3.1.2 /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g 2009-04-02 14:56:22

  package edu.umn.grounder.parser;
  
  import edu.umn.grounder.*;
  import edu.umn.grounder.constraint.*;
  import edu.umn.grounder.core.*;
  import edu.umn.grounder.expression.*;
  import edu.umn.grounder.instance.*;
  import edu.umn.grounder.constraint.Comparable;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class GrounderParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "SORTS", "NAME", "OBJECTS", "NUMBER", "VARIABLES", "CONSTANTS", "LOWER", "UPPER", "LETTER", "DIGIT", "SPACE", "NEWLINE", "':'", "'.'", "','", "';'", "'...'", "'('", "')'", "'='", "'!='", "'=='", "'>'", "'>='", "'<'", "'<='"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int LETTER=12;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int NUMBER=7;
    public static final int CONSTANTS=9;
    public static final int SPACE=14;
    public static final int EOF=-1;
    public static final int SORTS=4;
    public static final int T__19=19;
    public static final int NAME=5;
    public static final int T__16=16;
    public static final int NEWLINE=15;
    public static final int T__18=18;
    public static final int T__17=17;
    public static final int OBJECTS=6;
    public static final int VARIABLES=8;
    public static final int DIGIT=13;
    public static final int LOWER=10;
    public static final int UPPER=11;

    // delegates
    // delegators


        public GrounderParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public GrounderParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return GrounderParser.tokenNames; }
    public String getGrammarFileName() { return "/home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g"; }

     
       private LogicContext language = new LogicContext(); 
       private Clause currentClause = null;
       
       public void setLogicContext(LogicContext language) {
        this.language = language;
       }
       
       public LogicContext getLogicContext() {
        return this.language;
       }
       
       public void printErrorMessage(String message) {
        System.out.println(message);
        System.exit(1);
       }



    // $ANTLR start "language"
    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:41:1: language : sortSection objectSection variableSection constantSection theory ;
    public final void language() throws RecognitionException {
        try {
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:42:3: ( sortSection objectSection variableSection constantSection theory )
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:42:5: sortSection objectSection variableSection constantSection theory
            {
            pushFollow(FOLLOW_sortSection_in_language48);
            sortSection();

            state._fsp--;

            pushFollow(FOLLOW_objectSection_in_language50);
            objectSection();

            state._fsp--;

            pushFollow(FOLLOW_variableSection_in_language52);
            variableSection();

            state._fsp--;

            pushFollow(FOLLOW_constantSection_in_language54);
            constantSection();

            state._fsp--;

            pushFollow(FOLLOW_theory_in_language56);
            theory();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "language"


    // $ANTLR start "sortSection"
    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:46:1: sortSection : SORTS ':' sorts '.' ;
    public final void sortSection() throws RecognitionException {
        try {
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:47:3: ( SORTS ':' sorts '.' )
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:47:5: SORTS ':' sorts '.'
            {
            match(input,SORTS,FOLLOW_SORTS_in_sortSection69); 
            match(input,16,FOLLOW_16_in_sortSection71); 
            pushFollow(FOLLOW_sorts_in_sortSection73);
            sorts();

            state._fsp--;

            match(input,17,FOLLOW_17_in_sortSection75); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "sortSection"


    // $ANTLR start "sorts"
    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:49:1: sorts returns [List<String> value = new ArrayList<String>()] : sort[$value] ( ',' sort[$value] )* ;
    public final List<String> sorts() throws RecognitionException {
        List<String> value =  new ArrayList<String>();

        try {
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:50:3: ( sort[$value] ( ',' sort[$value] )* )
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:50:5: sort[$value] ( ',' sort[$value] )*
            {
            pushFollow(FOLLOW_sort_in_sorts91);
            sort(value);

            state._fsp--;

            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:50:18: ( ',' sort[$value] )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==18) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:50:19: ',' sort[$value]
            	    {
            	    match(input,18,FOLLOW_18_in_sorts95); 
            	    pushFollow(FOLLOW_sort_in_sorts97);
            	    sort(value);

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "sorts"


    // $ANTLR start "sort"
    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:52:1: sort[List<String> param] returns [String value] : NAME ;
    public final String sort(List<String> param) throws RecognitionException {
        String value = null;

        Token NAME1=null;

        try {
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:53:3: ( NAME )
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:53:5: NAME
            {
            NAME1=(Token)match(input,NAME,FOLLOW_NAME_in_sort117); 

                value = (NAME1!=null?NAME1.getText():null);
                if (param != null) {
                  language.recordSortName(value); 
                  param.add(value);
                }
              

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "sort"


    // $ANTLR start "objectSection"
    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:64:1: objectSection : OBJECTS ':' objectSortSections '.' ;
    public final void objectSection() throws RecognitionException {
        try {
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:65:3: ( OBJECTS ':' objectSortSections '.' )
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:65:5: OBJECTS ':' objectSortSections '.'
            {
            match(input,OBJECTS,FOLLOW_OBJECTS_in_objectSection135); 
            match(input,16,FOLLOW_16_in_objectSection137); 
            pushFollow(FOLLOW_objectSortSections_in_objectSection139);
            objectSortSections();

            state._fsp--;

            match(input,17,FOLLOW_17_in_objectSection141); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "objectSection"


    // $ANTLR start "objectSortSections"
    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:67:1: objectSortSections : objectsInOneSort ( ';' objectsInOneSort )* ;
    public final void objectSortSections() throws RecognitionException {
        try {
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:68:3: ( objectsInOneSort ( ';' objectsInOneSort )* )
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:68:5: objectsInOneSort ( ';' objectsInOneSort )*
            {
            pushFollow(FOLLOW_objectsInOneSort_in_objectSortSections151);
            objectsInOneSort();

            state._fsp--;

            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:68:22: ( ';' objectsInOneSort )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==19) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:68:23: ';' objectsInOneSort
            	    {
            	    match(input,19,FOLLOW_19_in_objectSortSections154); 
            	    pushFollow(FOLLOW_objectsInOneSort_in_objectSortSections156);
            	    objectsInOneSort();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "objectSortSections"


    // $ANTLR start "objectsInOneSort"
    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:70:1: objectsInOneSort : ( sort[null] ':' objects[sort] | sort[null] ':' min '...' max );
    public final void objectsInOneSort() throws RecognitionException {
        String sort2 = null;

        String sort3 = null;

        int min4 = 0;

        int max5 = 0;


        try {
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:71:3: ( sort[null] ':' objects[sort] | sort[null] ':' min '...' max )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==NAME) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==16) ) {
                    int LA3_2 = input.LA(3);

                    if ( (LA3_2==NAME) ) {
                        alt3=1;
                    }
                    else if ( (LA3_2==NUMBER) ) {
                        alt3=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 2, input);

                        throw nvae;
                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:71:5: sort[null] ':' objects[sort]
                    {
                    pushFollow(FOLLOW_sort_in_objectsInOneSort170);
                    sort2=sort(null);

                    state._fsp--;

                     
                        Sort sort = null;
                        if (language.hasRecorded(sort2)) {
                          sort = new Sort(sort2);
                          language.addSort(sort); 
                        } else {
                          String msg = "Sort %s has not been defined in the sort section!";
                          this.printErrorMessage(String.format(msg, sort2));
                        }
                      
                    match(input,16,FOLLOW_16_in_objectsInOneSort177); 
                    pushFollow(FOLLOW_objects_in_objectsInOneSort179);
                    objects(sort);

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:82:5: sort[null] ':' min '...' max
                    {
                    pushFollow(FOLLOW_sort_in_objectsInOneSort186);
                    sort3=sort(null);

                    state._fsp--;

                    match(input,16,FOLLOW_16_in_objectsInOneSort189); 
                    pushFollow(FOLLOW_min_in_objectsInOneSort191);
                    min4=min();

                    state._fsp--;

                    match(input,20,FOLLOW_20_in_objectsInOneSort193); 
                    pushFollow(FOLLOW_max_in_objectsInOneSort195);
                    max5=max();

                    state._fsp--;


                        if (language.hasRecorded(sort3)) { 
                          NumericalSort sort = new NumericalSort(sort3, min4, max5);
                          language.addSort(sort); 
                        } else {
                          String msg = "Sort %s has not been defined in the sort section!";
                          this.printErrorMessage(String.format(msg, sort3));
                        }
                      

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "objectsInOneSort"


    // $ANTLR start "min"
    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:93:1: min returns [int value] : NUMBER ;
    public final int min() throws RecognitionException {
        int value = 0;

        Token NUMBER6=null;

        try {
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:94:3: ( NUMBER )
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:94:5: NUMBER
            {
            NUMBER6=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_min214); 
             
                value = Integer.parseInt((NUMBER6!=null?NUMBER6.getText():null)); 
              

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "min"


    // $ANTLR start "max"
    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:99:1: max returns [int value] : NUMBER ;
    public final int max() throws RecognitionException {
        int value = 0;

        Token NUMBER7=null;

        try {
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:100:3: ( NUMBER )
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:100:5: NUMBER
            {
            NUMBER7=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_max234); 
             
                value = Integer.parseInt((NUMBER7!=null?NUMBER7.getText():null));
              

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "max"


    // $ANTLR start "objects"
    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:105:1: objects[Sort param] : object[$param] ( ',' object[$param] )* ;
    public final void objects(Sort param) throws RecognitionException {
        try {
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:106:3: ( object[$param] ( ',' object[$param] )* )
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:106:5: object[$param] ( ',' object[$param] )*
            {
            pushFollow(FOLLOW_object_in_objects250);
            object(param);

            state._fsp--;

            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:106:20: ( ',' object[$param] )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==18) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:106:21: ',' object[$param]
            	    {
            	    match(input,18,FOLLOW_18_in_objects254); 
            	    pushFollow(FOLLOW_object_in_objects256);
            	    object(param);

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "objects"


    // $ANTLR start "object"
    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:108:1: object[Sort param] : NAME ( '(' sorts ')' )* ;
    public final void object(Sort param) throws RecognitionException {
        Token NAME8=null;
        List<String> sorts9 = null;


        try {
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:109:3: ( NAME ( '(' sorts ')' )* )
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:109:5: NAME ( '(' sorts ')' )*
            {
            NAME8=(Token)match(input,NAME,FOLLOW_NAME_in_object272); 
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:109:10: ( '(' sorts ')' )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==21) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:109:11: '(' sorts ')'
            	    {
            	    match(input,21,FOLLOW_21_in_object275); 
            	    pushFollow(FOLLOW_sorts_in_object277);
            	    sorts9=sorts();

            	    state._fsp--;

            	    match(input,22,FOLLOW_22_in_object279); 

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


                ObjectFunction function = new ObjectFunction((NAME8!=null?NAME8.getText():null));
                if (sorts9 != null) {
                  for (String sortName : sorts9) {
                    function.recordArgumentName(sortName);
                  }
                }
                language.addObjectTermCollection(function);
                param.addObjectTermCollection(function);
              

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "object"


    // $ANTLR start "variableSection"
    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:123:1: variableSection : VARIABLES ':' variableSortSections '.' ;
    public final void variableSection() throws RecognitionException {
        try {
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:124:3: ( VARIABLES ':' variableSortSections '.' )
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:124:5: VARIABLES ':' variableSortSections '.'
            {
            match(input,VARIABLES,FOLLOW_VARIABLES_in_variableSection299); 
            match(input,16,FOLLOW_16_in_variableSection301); 
            pushFollow(FOLLOW_variableSortSections_in_variableSection303);
            variableSortSections();

            state._fsp--;

            match(input,17,FOLLOW_17_in_variableSection305); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "variableSection"


    // $ANTLR start "variableSortSections"
    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:126:1: variableSortSections : variablesInOneSort ( ';' variablesInOneSort )* ;
    public final void variableSortSections() throws RecognitionException {
        try {
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:127:3: ( variablesInOneSort ( ';' variablesInOneSort )* )
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:127:5: variablesInOneSort ( ';' variablesInOneSort )*
            {
            pushFollow(FOLLOW_variablesInOneSort_in_variableSortSections317);
            variablesInOneSort();

            state._fsp--;

            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:127:24: ( ';' variablesInOneSort )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==19) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:127:25: ';' variablesInOneSort
            	    {
            	    match(input,19,FOLLOW_19_in_variableSortSections320); 
            	    pushFollow(FOLLOW_variablesInOneSort_in_variableSortSections322);
            	    variablesInOneSort();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "variableSortSections"


    // $ANTLR start "variablesInOneSort"
    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:129:1: variablesInOneSort : sort[null] ':' variables[sort] ;
    public final void variablesInOneSort() throws RecognitionException {
        String sort10 = null;


        try {
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:130:3: ( sort[null] ':' variables[sort] )
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:130:5: sort[null] ':' variables[sort]
            {
            pushFollow(FOLLOW_sort_in_variablesInOneSort334);
            sort10=sort(null);

            state._fsp--;


                AbstractSort sort = language.getSort(sort10);
              
            match(input,16,FOLLOW_16_in_variablesInOneSort341); 
            pushFollow(FOLLOW_variables_in_variablesInOneSort343);
            variables(sort);

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "variablesInOneSort"


    // $ANTLR start "variables"
    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:135:1: variables[AbstractSort param] : variable[$param] ( ',' variable[$param] )* ;
    public final void variables(AbstractSort param) throws RecognitionException {
        try {
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:136:3: ( variable[$param] ( ',' variable[$param] )* )
            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:136:5: variable[$param] ( ',' variable[$param] )*
            {
            pushFollow(FOLLOW_variable_in_variables357);
            variable(param);

            state._fsp--;

            // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:136:22: ( ',' variable[$param] )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==18) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:136:23: ',' variable[$param]
            	    {
            	    match(input,18,FOLLOW_18_in_variables361); 
            	    pushFollow(FOLLOW_variable_in_variables363);
            	    variable(param);

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "variables"


    // $ANTLR start "variable"
    // /home/blan/Documents/EclipseProjects/Logic Grounder/src/edu/umn/grounder/parser/Grounder.g:138:1: variable[AbstractSort param] : NAME ;
    public final void variable(AbstractSort param) throws RecognitionException {
        Token NAME11=null;
